fix: spacing & cleanup

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -10,6 +10,7 @@
 
 body {
     font-size: 100%;
+    scroll-behavior: smooth;
     line-height: 1.5;
     color: #555;
     font-family: 'Montserrat', sans-serif;
