--- a/sass/_code.scss
+++ b/sass/_code.scss
@@ -6,8 +6,8 @@ pre {
     width: 95%;
 
     @media (max-width: $cut) {
-        margin-left: 1em;
-        margin-right: 1em;
+        margin-left: 1.5em;
+        margin-right: 1.5em;
         width: 80%;
     }
 
