--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -1,3 +1,13 @@
+.navbar {
+    padding-top: 0;
+    padding-bottom: 0;
+
+    @media only screen and (max-width:$cut) {
+        padding-top: 2rem;
+        padding-bottom: .5rem;
+    }
+}
+
 .navbar-search-container {
     display: flex;
 
